<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.github.venkatramanm.swf-all</groupId>
        <artifactId>swf-all</artifactId>
        <version>2.10</version>
    </parent>
    <artifactId>swf-plugin-collab</artifactId>
    <version>2.13-SNAPSHOT</version>


    <name>${project.groupId}:${project.artifactId}</name>
    <description>Succinct Web Framework - Plugin collaboration</description>
    <url>http://succinct.in</url>
    <licenses>
        <license>
            <name>MIT</name>
            <url>LICENSE.txt</url>
        </license>
    </licenses>
    <scm>
        <connection>scm:git:git@github.com:venkatramanm/swf-all.git</connection>
        <developerConnection>scm:git:git@github.com:venkatramanm/swf-all.git</developerConnection>
        <url>https://github.com/venkatramanm/swf-all/tree/master/swf-plugin-collab</url>
    </scm>
    <developers>
        <developer> 
          <name>Venkatraman Mahadevan</name>
          <email>venky@succinct.in</email>
          <organization>Succinct</organization>
          <organizationUrl>http://succinct.in</organizationUrl>
        </developer>
    </developers>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.github.venkatramanm.swf-all</groupId>
            <artifactId>swf</artifactId>
            <version>[2.10,3.0)</version>
        </dependency>
        <dependency>
            <groupId>com.github.venkatramanm.swf-all</groupId>
            <artifactId>swf-plugin-templates</artifactId>
            <version>[2.10,3.0)</version>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>swf-plugin-calendar</artifactId>
            <version>[2.10,3.0)</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/commons-net/commons-net -->
        <dependency>
            <groupId>commons-net</groupId>
            <artifactId>commons-net</artifactId>
            <version>3.9.0</version>
        </dependency>
    </dependencies>
</project>
